# recall

./: LICENSE  README.md  pyproject.toml
recall/: __init__.py  main.py
recall/commands/: add.py  get.py  init.py  remove.py  show.py  update.py  view.py
recall/config/: config.py  config.toml
recall/core/: __init__.py  manager.py  service.py
recall/core/database/: __init__.py  manager.py
recall/data/: __init__.py  database.py
recall/errors/: __init__.py  exceptions.py
recall/utils/: decorators.py
