[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recallrecall_ingenious"
version = "0.2.0"
authors = [
  { name="{^^}", email="drkwolf52@gmail.com" },
]
description = "Recall is a command line application project directories tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "tomli-w>=1.2.0",
    "typer>=0.20.0",
]

[project.scripts]
recall = "recall.main:app"
